--- a/lab2/Lab2-session.ipynb
+++ b/lab2/Lab2-session.ipynb
@@ -23,14 +23,6 @@
     "- Implementing Polynomial Regression algorithm\n",
     "- Multiple linear regression\n",
     "\n",
-    "\n",
-    "### Regression\n",
-    "1. What is regression?\n",
-    "2. Why we need to explore the Data for Regression, specifically?\n",
-    "3. What methods do we usually use for data preparation?\n",
-    "3. When Do We Need Regression?\n",
-    "\n",
-    "\n",
     "### Linear Regression\n",
     "1. What is linear regression?\n",
     "</span>\n",
@@ -467,7 +459,19 @@
     " - $ RMSE = \\sqrt{MSE} = \\sqrt{\\frac{1}{n} \\sum_{i=1}^{n} (y_{i}^{real} - y_{i}^{pred})^{2}}$\n",
     "\n",
     "\n",
-    "Q: What RMSE, MSE and R-squared tell us?"
+    "Q: What RMSE, MSE and R-squared tell us?\n",
+    "\n",
+    "In short, MAE evaluates the absolute distance of the observations (the entries of the dataset) to the predictions on a regression, taking the average over all observations. We use the absolute value of the distances so that negative errors are accounted properly.\n",
+    "\n",
+    "\n",
+    "Another way to do so is by squaring the distance, so that the results are positive. This is done by the MSE, and higher errors (or distances) weigh more in the metric than lower ones, due to the nature of the power function.\n",
+    "\n",
+    "\n",
+    "A backlash in MSE is the fact that the unit of the metric is also squared, so if the model tries to predict price in US$, the MSE will yield a number with unit (US$)² which does not make sense. RMSE is used then to return the MSE error to the original unit by taking the square root of it, while maintaining the property of penalizing higher errors.\n",
+    "\n",
+    "\n",
+    "Both RMSE and MSE tell us how much our predictions will be away from the truth on average.\n",
+    "$R^2$ tells us the proportion of the variance/variability in the Y was explained by the model via the explanatory variables."
    ]
   },
   {
@@ -489,7 +493,7 @@
    "source": [
     "from sklearn import metrics\n",
     "\n",
-    "# i use an alternative to mean_squared_error() method that is deprecated\n",
+    "# we use an alternative to mean_squared_error() method that is deprecated\n",
     "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_pred))\n",
     "print('Mean Squared Error:', np.power(metrics.root_mean_squared_error(y_test, y_pred), 2))\n",
     "print('Root Mean Squared Error:', metrics.root_mean_squared_error(y_test, y_pred))"
@@ -904,7 +908,7 @@
    "id": "96231930",
    "metadata": {},
    "source": [
-    "#### Create sinusoidal function"
+    "#### Create cosinusoidal function"
    ]
   },
   {
