feat: add lab2 self practice

--- a/lab2/Lab2-session.ipynb
+++ b/lab2/Lab2-session.ipynb
@@ -854,11 +854,11 @@
     "### Data standardization vs normalization, which one to use?\n",
     "\n",
     "\n",
-    "![Feature scaling, standartization vs Max min](res/f_scaling_stand_vs_max_min.png \"Feature scaling, standartization vs Max min\")\n",
+    "![Feature scaling, standartization vs Max min](data/f_scaling_stand_vs_max_min.png \"Feature scaling, standartization vs Max min\")\n",
     "\n",
-    "![Feature scaling](res/f_scaling_c_age.png \"Feature scaling\")\n",
+    "![Feature scaling](data/f_scaling_c_age.png \"Feature scaling\")\n",
     "\n",
-    "![Feature scaling](res/f_scaling_c_salary.png \"Feature scaling\")\n",
+    "![Feature scaling](data/f_scaling_c_salary.png \"Feature scaling\")\n",
     "\n",
     "From the above graphs, we can clearly notice that applying Max-Min Nomaralisation in our dataset has generated smaller standard deviations (Salary and Age) than using Standardisation method. It implies the data are more concentrated around the mean if we scale data using Max-Min Nomaralisation.\n",
     "\n",
@@ -2303,7 +2303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
